# mcp-server-trfrmarket

./: README.md  build_server.ipynb
assets/: fbr_api_documentation.txt  mcp_full_text.txt  mcp_python_sdk_readme.txt  mcp_server_generated_by_claude_raw.py  overall_prompt.md  world_football_transfer_market.txt
client/: collated_questions.tsv  main.py  run_client.ipynb  run_exp.ipynb
observations/: README.md
questions/: README.md  anthropic_onehop.txt  anthropic_twothreehop.txt  chatgpt.txt  chatgpt_obs.txt
server/: DockerFile  README.md  mcp_server.py  pyproject.toml  requirements.txt
