[project]
name = "mcp-transfer-market"
version = "0.1.0"
description = "MCP server for Transfer Market"
authors = [
    {name = "Abhishek Mishra",email = "mishra.abhishek199917@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp (==1.6.0)",
    "pandas (==2.2.3)",
    "python-dotenv (==1.1.0)",
    "rpy2 (==3.5.17)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
